fix overflow

--- a/assets/app.css
+++ b/assets/app.css
@@ -144,6 +144,6 @@ img {
   text-transform: uppercase;
 }
 
-.md-list {
+md-list {
   overflow: auto;
 }
